--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <div class="frame">
-        <div class="canvas"></div>
+        <div class="canvas">
+            <div class="one">
+                
+            </div>
+        </div>
     </div>
 </body>
 
